main: Adds some files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+
+# Gradle
+.gradle/
+build/
+out/
+!gradle/wrapper/gradle-wrapper.jar
+
 # Compiled class file
 *.class
 
