--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,27 @@ replay_pid*
 
 # Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
 .kotlin/
+
+# macOS
+.DS_Store
+
+# Windows thumbnail cache
+Thumbs.db
+
+# VS Code
+.vscode/
+
+# Eclipse project files
+.project
+.classpath
+.settings/
+
+# Gradle Wrapper files
+gradle-wrapper.jar
+
+# Java temporary files
+*.tmp
+*.bak
+
+# Ignore the .gradle directory for Kotlin-based dependencies
+.gradle/
