--- a/logic/build.gradle
+++ b/logic/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
     implementation("com.google.guava:guava:32.0.1-jre")
+    implementation ("org.bytedeco:javacv-platform:1.5.7")
 }
 
 java {
