--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ replay_pid*
 
 # Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
 .kotlin/
+/app/src/main/java/logic/text_edit/action/FindAction.java
