--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,17 +13,32 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
 }
 
-run {
-    jvmArgs = [
-            "--module-path", classpath.asPath,
-            "--add-modules", "javafx.controls,javafx.graphics"
-    ]
-}
-
 application {
-    mainClass = 'ui.EditWindow'
+    mainClass = 'logic.persistence.InitDatabase'
 }
 
 dependencies {
-    // Другие зависимости, если нужны
+    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                "--module-path", classpath.asPath,
+                "--add-modules", "javafx.controls,javafx.graphics"
+        ]
+    }
+}
+
+
+tasks.register('initDatabase', JavaExec) {
+    dependsOn classes
+    group = "database"
+    description = "Creates SQLite file and adds db scheme"
+    mainClass = 'logic.persistence.InitDatabase'
+    classpath = sourceSets.main.runtimeClasspath
+    doFirst {
+        def dbPath = project.file('db_examples/test.db').absolutePath
+        args = [dbPath]
+    }
 }
