feature: Adjusts ffmpeg file processing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
     implementation("com.google.guava:guava:32.0.1-jre")
     implementation ("org.bytedeco:javacv-platform:1.5.7")
+    implementation("org.bytedeco:ffmpeg-platform:5.1-1.5.7")
 }
 
 java {
