--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
     implementation("com.google.guava:guava:32.0.1-jre")
-    implementation ("org.bytedeco:javacv-platform:1.5.7")
-    implementation("org.bytedeco:ffmpeg-platform:7.1-1.5.11")
+    implementation "org.bytedeco:javacv-platform:1.5.8"
+    implementation "org.bytedeco:ffmpeg-platform:4.4-1.5.8"
 }
 
 java {
