--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ application {
 dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
     implementation 'org.slf4j:slf4j-api:2.0.12'
-    implementation 'ch.qos.logback:logback-classic:1.5.6'  // реализация SLF4J
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
 }
 
 tasks.withType(JavaExec) {
