--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,28 +11,43 @@ repositories {
     mavenCentral()
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'net.java.dev.jna:jna:5.13.0'
+    }
+}
+
 dependencies {
     implementation 'net.java.dev.jna:jna:5.13.0'
-    implementation group: 'com.alphacephei', name: 'vosk', version: '0.3.45'
+    implementation 'com.alphacephei:vosk:0.3.45'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
     implementation("com.google.guava:guava:32.0.1-jre")
     implementation "org.bytedeco:javacv-platform:1.5.8"
     implementation "org.bytedeco:ffmpeg-platform:4.4-1.5.8"
     implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
     implementation 'org.slf4j:slf4j-api:2.0.12'
-    implementation 'ch.qos.logback:logback-classic:1.5.6'  // реализация SLF4J
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
 }
 
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(21))
     }
+    modularity.inferModulePath = true
 }
 
 javafx {
     version = "21"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'vosk'
+    ]
 }
 
 application {
@@ -44,18 +59,6 @@ application {
             "--add-modules=javafx.controls,javafx.fxml,javafx.graphics",
             "-Dprism.verbose=true"
     ]
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs = [
-            "--module-path", classpath.asPath,
-            "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
-    ]
-}
-configurations.all {
-    resolutionStrategy {
-        force 'net.java.dev.jna:jna:5.13.0'
-    }
 }
 
 jlink {
