--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,6 @@ plugins {
     id 'org.beryx.jlink' version '3.0.0'
 }
 
-sourceCompatibility = JavaVersion.VERSION_21
-
 version = '1.0.0'
 
 repositories {
@@ -25,7 +23,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
     implementation("com.google.guava:guava:32.0.1-jre")
     implementation "org.bytedeco:javacv-platform:1.5.8"
-    implementation "org.bytedeco:ffmpeg-platform:4.4-1.5.8"
     implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
     implementation 'org.slf4j:slf4j-api:2.0.12'
 
@@ -53,8 +50,6 @@ tasks.withType(JavaCompile) {
 
 application {
     mainClass = 'ui.DownloadingApp'
-//    mainClass = 'logic.vosk.MicroRecogniseDemo'
-//    mainClass = 'logic.persistence.InitDatabase'
     applicationDefaultJvmArgs = [
             '-Xms5G',
             '-Xmx5G',
@@ -69,7 +64,7 @@ jlink {
     launcher {
         name = 'Vstrecheslav'
         jvmArgs = [
-                '-Xmx4G',
+                '-Xmx5G',
                 '-Xms512M'
         ]
     }
@@ -77,45 +72,51 @@ jlink {
     jpackage() {
         jvmArgs = ['-Xmx12G']
 
-        imageOptions += [
-                '--resource-dir', "${buildDir}/jpackage-resources",
-                '--temp', "${buildDir}/jpackage-temp"  // Отдельная temp-папка
-        ]
-
         if (org.gradle.internal.os.OperatingSystem.current().windows) {
             imageOptions += [
-                    '--icon', 'src/main/resources/icon.ico',
-                    '--resource-dir', "${buildDir}/jpackage-resources",
-                    '--win-dir-chooser',
-                    '--win-menu',
-                    '--win-shortcut'
+                    '--icon', 'src/main/resources/icon.ico'
             ]
             installerOptions += [
-                    '--resource-dir', "${buildDir}/jpackage-resources",
                     '--win-dir-chooser',
                     '--win-menu',
                     '--win-shortcut',
             ]
-        } else if (org.gradle.internal.os.OperatingSystem.current().linux) {
-            imageOptions += ['--icon', 'src/main/resources/icon.png']
-            installerOptions += [
-                    '--linux-shortcut',
-                    '--resource-dir', 'resources/models/ai-models'
-            ]
-        } else if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
-            imageOptions += ['--icon', 'src/main/resources/icon.icns']
-            installerOptions += ['--mac-package-name', 'Vstrecheslav']
         }
 
         imageOptions += [
-                '--resource-dir', "${buildDir}/jpackage-resources",
                 '-J-Xmx5G',
                 '-J-Xms512M',
-                '--vendor', 'Vsu Production'
+                '--vendor', 'Vsu Production',
+                '--app-content', "src/main/resources",
+                '--app-content', "dynamic-resources"
         ]
         installerOptions += [
                 '--vendor', 'Vsu Production',
-                '--app-version', version
+                '--app-version', version,
         ]
     }
 }
+
+tasks.register('copyDynamicResources', Copy) {
+    from 'dynamic-resources'
+    into "${buildDir}/dynamic-resources"
+}
+
+tasks.named('jlink') {
+    dependsOn 'copyDynamicResources'
+}
+
+tasks.named('jpackage') {
+    dependsOn 'copyDynamicResources'
+}
+
+//else if (org.gradle.internal.os.OperatingSystem.current().linux) {
+//    imageOptions += ['--icon', 'src/main/resources/icon.png']
+//    installerOptions += [
+//            '--linux-shortcut',
+//            '--resource-dir', 'resources/models/ai-models'
+//    ]
+//} else if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
+//    imageOptions += ['--icon', 'src/main/resources/icon.icns']
+//    installerOptions += ['--mac-package-name', 'Vstrecheslav']
+//}
