feature/added db tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
     implementation 'org.slf4j:slf4j-api:2.0.12'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
+    implementation 'ch.qos.logback:logback-classic:1.5.13'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testImplementation 'junit:junit:4.13.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'  // Для параметризованных тестов
+    testImplementation 'org.assertj:assertj-core:3.25.3'  // Удобны
 }
 
 java {
@@ -39,6 +44,13 @@ java {
 javafx {
     version = "21"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
 
 tasks.withType(JavaCompile) {
