--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,6 +1,13 @@
+.gradle/
+build/
+out/
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+
+
 dynamic-resources/ai-models/speech-recognition-model/*
-gradle/*
-build
-gradlew
-gradlew.bat
 db_examples/*.db
+
+
+.DS_Store
+Thumbs.db
