--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -3,14 +3,15 @@ name: Java CI with Gradle
 on:
   push:
     branches: 
-      - "main"
-      - "test" 
-      - "develop" 
+      - "**"  
+    paths:
+      - 'app/src/**'
   pull_request:
     branches:
-      - "main"
       - "develop" 
-    types: [opened, synchronize, reopened, ready_for_review]  
+    types: [opened, synchronize, reopened, ready_for_review]
+    paths:
+      - 'app/src/**'  
   workflow_dispatch:  
 
 jobs:
