--- a/app/.gitignore
+++ b/app/.gitignore
@@ -6,6 +6,7 @@ out/
 
 
 dynamic-resources/ai-models/speech-recognition-model/*
+dynamic-resources/Vikhr-Llama-3.2-1B-Q8_0.gguf
 db_examples/*.db
 
 
