--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ jlink {
                     '--win-dir-chooser',
                     '--win-menu',
                     '--win-shortcut',
+                    '--type msi'
             ]
         } else if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
             imageOptions += [
