--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainClass = 'ui.DownloadingApp'
+    mainClass = 'ui.MainWindow'
     applicationDefaultJvmArgs = [
             '-Xms5G',
             '-Xmx5G',
