--- a/app/.gitignore
+++ b/app/.gitignore
@@ -7,6 +7,7 @@ out/
 
 dynamic-resources/ai-models/speech-recognition-model/*
 dynamic-resources/ai-models/LLM/*
+dynamic-resources/lectures/*
 db_examples/*.db
 
 
