--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.beryx.jlink' version '3.0.0'
+    id 'jacoco'
 }
 
 allprojects {
@@ -31,8 +32,8 @@ dependencies {
     implementation "org.bytedeco:javacv-platform:1.5.8"
     implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
     implementation 'org.slf4j:slf4j-api:2.0.12'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'ch.qos.logback:logback-classic:1.5.13'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
     testImplementation 'junit:junit:4.13.1'
@@ -60,7 +61,10 @@ test {
     useJUnitPlatform()
     testLogging {
         events "passed", "skipped", "failed"
+        showStandardStreams = true
+        exceptionFormat = 'full'
     }
+    maxParallelForks = 4
 }
 
 tasks.withType(JavaCompile) {
@@ -123,7 +127,6 @@ jlink {
                 '--vendor', 'Vsu Production',
                 '--app-content', "src/main/resources",
                 '--app-content', "dynamic-resources"
-
         ]
         installerOptions += [
                 '--about-url', 'https://vk.com/vstrecheslav?from=groups',
