--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
-      checks: write  
+      checks: write 
       actions: read  
 
     steps:
@@ -30,40 +30,41 @@ jobs:
       run: rm -f app/database.db
       working-directory: ./
 
-    - name: Change to app directory
+    - name: Перейти в директорию app
       run: cd app
       shell: bash
 
-    - name: Set execute permissions
+    - name: Установить права на выполнение
       if: matrix.os != 'windows-latest'
       run: |
         chmod +x gradlew
         ls -la gradlew*
       working-directory: ./app
 
-    - name: Verify Gradle
+    - name: Проверить Gradle
       run: ./gradlew --version
       working-directory: ./app
 
-    - name: Set up JDK 21
+    - name: Настроить JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
-        cache: 'gradle'
+        cache: gradle
 
-    - name: Setup Gradle
+    - name: Настроить Gradle
       uses: gradle/actions/setup-gradle@v4
       with:
         cache-read-only: false
-        cache-enabled: true
-        build-root-directory: app
+        cache-write-only: false
+        gradle-home-cache-cleanup: true  
+      working-directory: app  
 
-    - name: Run tests with JaCoCo
+    - name: Запустить тесты с JaCoCo
       run: ./gradlew test jacocoTestReport --stacktrace --info
       working-directory: ./app
 
-    - name: Upload test reports
+    - name: Загрузить отчёты тестов
       uses: actions/upload-artifact@v4
       if: always()
       with:
@@ -73,7 +74,7 @@ jobs:
           app/build/test-results/
         retention-days: 7
 
-    - name: Upload JaCoCo report
+    - name: Загрузить отчёт JaCoCo
       uses: actions/upload-artifact@v4
       if: always()
       with:
@@ -81,7 +82,7 @@ jobs:
         path: app/build/reports/jacoco/
         retention-days: 7
 
-    - name: Publish test results
+    - name: Опубликовать результаты тестов
       uses: EnricoMi/publish-unit-test-result-action@v2
       if: always()
       with:
@@ -89,7 +90,7 @@ jobs:
         check_name: Test Results (${{ matrix.os }})
         comment_mode: off
 
-    - name: Build with Gradle
+    - name: Собрать проект
       run: ./gradlew build -x test
       working-directory: ./app
 
@@ -101,15 +102,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Change to app directory
+    - name: Перейти в директорию app
       run: cd app
       shell: bash
-    - name: Set up JDK 21
+    - name: Настроить JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
-    - name: Generate dependency graph
+    - name: Создать граф зависимостей
       uses: gradle/actions/dependency-submission@v4
       with:
-        build-root-directory: app
+        working-directory: app
