--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
-      checks: write 
-      actions: read  
+      checks: write  # Для публикации результатов тестов
+      actions: read  # Для доступа к Actions
 
     steps:
     - uses: actions/checkout@v4
@@ -57,8 +57,8 @@ jobs:
       with:
         cache-read-only: false
         cache-write-only: false
-        gradle-home-cache-cleanup: true  
-      working-directory: app  
+        gradle-home-cache-cleanup: true  # Очистка кэша Gradle для экономии места
+      working-directory: app  # Указываем рабочую директорию
 
     - name: Запустить тесты с JaCoCo
       run: ./gradlew test jacocoTestReport --stacktrace --info
