--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,13 +2,13 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches:
-      - "**"
+    branches: 
+      - "**"  
   pull_request:
     branches:
-      - "develop"
+      - "develop" 
     types: [opened, synchronize, reopened, ready_for_review]
-  workflow_dispatch:
+  workflow_dispatch:  
 
 jobs:
   build-and-test:
@@ -18,55 +18,50 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
-      checks: write  # Для публикации результатов тестов
-      actions: read  # Для доступа к Actions
 
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: 0
+        fetch-depth: 0 
 
-    - name: Очистка рабочей директории
-      run: rm -f app/database.db
-      working-directory: ./
-
-    - name: Перейти в директорию app
+    - name: Change to app directory
       run: cd app
       shell: bash
 
-    - name: Установить права на выполнение
+    - name: Set execute permissions
       if: matrix.os != 'windows-latest'
       run: |
         chmod +x gradlew
-        ls -la gradlew*
+        ls -la gradlew*  # Verify permissions
       working-directory: ./app
 
-    - name: Проверить Gradle
+    - name: Verify Gradle
       run: ./gradlew --version
       working-directory: ./app
 
-    - name: Настроить JDK 21
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
-        cache: gradle
+        cache: 'gradle'
 
-    - name: Настроить Gradle
+    - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
       with:
         cache-read-only: false
-        cache-write-only: false
-        gradle-home-cache-cleanup: true
-        gradle-home-cache-excludes: |
-          caches/*/fileHashes/
-          caches/*/scripts/
+        cache-enabled: true
+        build-root-directory: app
 
-    - name: Запустить тесты с JaCoCo
-      run: ./gradlew test jacocoTestReport --stacktrace --info
+    - name: Run tests
+      run: ./gradlew test --stacktrace --info --scan
       working-directory: ./app
 
-    - name: Загрузить отчёты тестов
+    - name: Build with Gradle
+      run: ./gradlew build -x test
+      working-directory: ./app
+
+    - name: Upload test reports
       uses: actions/upload-artifact@v4
       if: always()
       with:
@@ -76,43 +71,23 @@ jobs:
           app/build/test-results/
         retention-days: 7
 
-    - name: Загрузить отчёт JaCoCo
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: jacoco-report-${{ matrix.os }}
-        path: app/build/reports/jacoco/
-        retention-days: 7
-
-    - name: Опубликовать результаты тестов
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      if: always()
-      with:
-        files: app/build/test-results/**/*.xml
-        check_name: Test Results (${{ matrix.os }})
-        comment_mode: off
-
-    - name: Собрать проект
-      run: ./gradlew build -x test
-      working-directory: ./app
-
   dependency-submission:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: build-and-test 
     permissions:
       contents: write
 
     steps:
     - uses: actions/checkout@v4
-    - name: Перейти в директорию app
+    - name: Change to app directory
       run: cd app
       shell: bash
-    - name: Настроить JDK 21
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
-    - name: Создать граф зависимостей
+    - name: Generate dependency graph
       uses: gradle/actions/dependency-submission@v4
       with:
-        working-directory: app
+        build-root-directory: app
